--- a/src/client/containers/App.styl
+++ b/src/client/containers/App.styl
@@ -1,4 +1,8 @@
+@import 'nib'
+@import 'nib/gradients'
+
 @import '../variables.styl'
+
 
 .App-container
   margin: 20px
@@ -12,8 +16,9 @@
     display flex
     flex-flow row wrap
     justify-content space-between
-    background-color color-normal
-    color color-white
+    background linear-gradient(top, color-dark, color-black)
+    box-shadow 0px 2px 10px color-normal
+    color color-lightest
     z-index 999
     
     h2
