--- a/src/client/variables.styl
+++ b/src/client/variables.styl
@@ -1,8 +1,9 @@
-color-darkest = #212C2F
-color-dark = #28454C
-color-normal = #255C69
-color-light = #197186
-color-lightest = #0589A8
+color-lightest = #1dc4fb
+color-light = darken(color-lightest, 10)
+color-normal = darken(color-lightest, 20)
+color-darkest = #171717
+color-dark = #28292b
+
 
 color-white = #fafeff
 color-black = #000000
