--- a/src/client/components/MovieItem.styl
+++ b/src/client/components/MovieItem.styl
@@ -1,28 +1,69 @@
 @import '../variables.styl'
 
 .MovieItem-container
-  background-color lighten(color-lightest, 55)
-  border-radius 5px
-  border 1px solid lighten(color-lightest, 45)
-  width 240px
-  margin 10px
+  cursor pointer
+  z-index 99
   
   img
     display block
-    margin 20px auto 10px
-    max-width 200px
-    border-radius 3px
-    
-  p
-    display block
-    margin 20px 20px
-    font-size 0.8rem
-    
-    .NoDescription
-      color color-dark
-      font-style italic
+    margin 10px
+    width 200px
+    transition all 200ms ease-in-out
   
-  button
-    display block
-    margin 10px auto
+  .noImage
+    width 200px
+    height 170px
+    margin 10px
+    padding-top 130px
+    background-color color-dark
+    text-align center
+  
+  h4 
+    font-size 0.7em
+    color color-white
+    transition all 200ms ease-in-out
+    
+  &:hover
+    > img
+      opacity 0.6
+      
+    h4
+      color darken(color-white, 20)
+  
+  .MovieInView-container
+    position fixed
+    top 0
+    left 0
+    width 90vw
+    height 90vh
+    opacity 0
+    background-color color-darkest
+    transition all 200ms ease-in-out
+    z-index -1
+    padding 5vh 5vw
+    
+    img, .noImage
+      display table
+      margin 0 auto 20px
+      width 250px
+      
+    
+    h2
+      color color-white
+    
+    h2, h3
+      margin-bottom 20px
+    
+    .popularity
+      color color-lightest
+    
+    p
+      font-size 1.2em
+      text-align center
+    
+    &.visible
+      opacity 1
+      z-index 999
+    
+
       
