--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Movie Database UI</title>
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,200" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,200" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"  type="text/css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   </head>
   <body>
