Update MovieItem and its styling

--- a/src/client/components/MovieItem.styl
+++ b/src/client/components/MovieItem.styl
@@ -48,14 +48,21 @@
       width 250px
       
     
-    h2
+    .MovieInView-title
       color color-white
-    
-    h2, h3
+      
+    .MovieInView-description
+      color color-gray
+
+    .MovieInView-title, .MovieInView-description
       margin-bottom 20px
     
-    .popularity
-      color color-lightest
+    .MovieInView-popularity, .MovieInView-rating
+      margin-bottom 15px
+      color darken(color-gray, 40)
+      
+      span
+        color color-lightest
     
     p
       font-size 1.2em
